[package]
name = "sys_monitor"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
strum = { version = "0.23", features = ["derive"]}
chrono = "0.4"
widestring = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
tracing-appender = "0.2"
bytemuck = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.5"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
intrusive-collections = "0.9.6"
parking_lot = "0.12"
smol = "2.0"
anyhow = "1.0"
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
ariadne = { version = "0.4", features = ["auto-color"] }

[dependencies.windows]
version = "0.53"
features = [
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_SystemInformation"
]

[build-dependencies]
slint-build = "1.5"