[package]
name = "sys_monitor"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.26", features = ["derive"]}
chrono = "0.4"
widestring = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter"] }
tracing-appender = "0.2"
bytemuck = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.6"
i-slint-backend-winit = "1.6"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
intrusive-collections = "0.9.6"
parking_lot = "0.12"
smol = "2.0"
anyhow = "1.0"
thiserror = "1.0"
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
once_cell = "1.19"
indexmap = "2.2"
ascii = "1.1"
regex = "1.10"
const-default = { version = "1.0", features = ["derive"] }
pdb = "0.8"
phf = { version = "0.11", features = ["macros"] }
ahash = "0.8.11" # for version conflict
time = "0.3.36"  # for version conflict

[dependencies.windows]
version = "0.53"
features = [
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Wdk_Foundation",
    "Wdk_System",
    "Wdk_System_SystemServices",
]

[build-dependencies]
slint-build = "1.6"
static_vcruntime = "2.0"